; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iicbus/extr_iiconf.c_iicbus_release_bus.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iicbus/extr_iiconf.c_iicbus_release_bus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iicbus_softc = type { i64, i64, i32 }

@IIC_EBUSBSY = common dso_local global i32 0, align 4
@IIC_RELEASE_BUS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iicbus_release_bus(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.iicbus_softc*, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call i64 @device_get_softc(i64 %7)
  %9 = inttoptr i64 %8 to %struct.iicbus_softc*
  store %struct.iicbus_softc* %9, %struct.iicbus_softc** %6, align 8
  %10 = load %struct.iicbus_softc*, %struct.iicbus_softc** %6, align 8
  %11 = call i32 @IICBUS_LOCK(%struct.iicbus_softc* %10)
  %12 = load %struct.iicbus_softc*, %struct.iicbus_softc** %6, align 8
  %13 = getelementptr inbounds %struct.iicbus_softc, %struct.iicbus_softc* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* %5, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %2
  %18 = load %struct.iicbus_softc*, %struct.iicbus_softc** %6, align 8
  %19 = call i32 @IICBUS_UNLOCK(%struct.iicbus_softc* %18)
  %20 = load i32, i32* @IIC_EBUSBSY, align 4
  store i32 %20, i32* %3, align 4
  br label %47

21:                                               ; preds = %2
  %22 = load %struct.iicbus_softc*, %struct.iicbus_softc** %6, align 8
  %23 = getelementptr inbounds %struct.iicbus_softc, %struct.iicbus_softc* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = add nsw i64 %24, -1
  store i64 %25, i64* %23, align 8
  %26 = icmp eq i64 %25, 0
  br i1 %26, label %27, label %44

27:                                               ; preds = %21
  %28 = load %struct.iicbus_softc*, %struct.iicbus_softc** %6, align 8
  %29 = call i32 @IICBUS_UNLOCK(%struct.iicbus_softc* %28)
  %30 = load i64, i64* %4, align 8
  %31 = call i32 @device_get_parent(i64 %30)
  %32 = load i32, i32* @IIC_RELEASE_BUS, align 4
  %33 = call i32 @IICBUS_CALLBACK(i32 %31, i32 %32, i32* null)
  %34 = load %struct.iicbus_softc*, %struct.iicbus_softc** %6, align 8
  %35 = call i32 @IICBUS_LOCK(%struct.iicbus_softc* %34)
  %36 = load %struct.iicbus_softc*, %struct.iicbus_softc** %6, align 8
  %37 = getelementptr inbounds %struct.iicbus_softc, %struct.iicbus_softc* %36, i32 0, i32 0
  store i64 0, i64* %37, align 8
  %38 = load %struct.iicbus_softc*, %struct.iicbus_softc** %6, align 8
  %39 = call i32 @wakeup_one(%struct.iicbus_softc* %38)
  %40 = load %struct.iicbus_softc*, %struct.iicbus_softc** %6, align 8
  %41 = getelementptr inbounds %struct.iicbus_softc, %struct.iicbus_softc* %40, i32 0, i32 2
  %42 = load i32, i32* %41, align 8
  %43 = call i32 @device_unbusy(i32 %42)
  br label %44

44:                                               ; preds = %27, %21
  %45 = load %struct.iicbus_softc*, %struct.iicbus_softc** %6, align 8
  %46 = call i32 @IICBUS_UNLOCK(%struct.iicbus_softc* %45)
  store i32 0, i32* %3, align 4
  br label %47

47:                                               ; preds = %44, %17
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

declare dso_local i64 @device_get_softc(i64) #1

declare dso_local i32 @IICBUS_LOCK(%struct.iicbus_softc*) #1

declare dso_local i32 @IICBUS_UNLOCK(%struct.iicbus_softc*) #1

declare dso_local i32 @IICBUS_CALLBACK(i32, i32, i32*) #1

declare dso_local i32 @device_get_parent(i64) #1

declare dso_local i32 @wakeup_one(%struct.iicbus_softc*) #1

declare dso_local i32 @device_unbusy(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
